<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_account"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/register_account_hint"
        android:maxLines="1"
        android:maxLength="11"
        android:id="@+id/user_account"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_password"
        android:textSize="20sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_password_hint"
        android:inputType="textPassword"
        android:maxLength="18"
        android:id="@+id/user_password"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_name"
        android:textSize="20sp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_name_hint"
        android:maxLines="1"
        android:maxLength="12"
        android:id="@+id/user_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_sex"
        android:textSize="20sp"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_sex"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_age"
        android:textSize="20sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_age_hint"
        android:inputType="number"
        android:maxLength="2"
        android:id="@+id/user_age"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_school"
        android:textSize="20sp"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_school"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:text="@string/register_submit"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/submit_btn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_cancel"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/cancel_btn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_reset"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/reset_btn"/>
    </LinearLayout>
</LinearLayout>