<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".module.ChargeActivity">
    <androidx.appcompat.widget.Toolbar
        style="@style/ToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        app:titleTextColor="#000000"
        android:id="@+id/charge_toolbar"/>
    <TextView
        android:padding="10dp"
        android:text="@string/charge_tip"
        android:textSize="17sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/charge_list"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/charge_total"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="17sp" />
        <TextView
            android:textSize="17sp"
            android:text="@string/charge_money"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/money_total_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment"
            android:textSize="17sp"
            android:layout_gravity="center"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/payment">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/alipay"
                android:text="@string/ali_pay"
                android:checked="true"
                android:id="@+id/ali_pay"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/wechat"
                android:text="@string/we_chat"
                android:id="@+id/we_chat"/>
        </RadioGroup>
    </LinearLayout>

    <Button
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="#FF9D6F"
        android:text="@string/nav_charge"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:id="@+id/charge_btn"/>

</LinearLayout>