<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.ReportActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="46dp"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/colorText"
        android:id="@+id/report_toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/report_toolbar"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="40dp"
        android:id="@+id/user">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_user"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorText"
            android:id="@+id/report_user"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/user"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="40dp"
        android:id="@+id/reason">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_reason"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/colorText"
            android:maxLength="40"
            android:maxLines="4"
            android:id="@+id/report_reason"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/reason"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="40dp"
        android:id="@+id/picture">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/report_evidence"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/report_choose"
                android:textSize="16sp"
                android:textColor="@color/colorText"
                android:id="@+id/report_choose"/>
            <ImageView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:id="@+id/report_evidence"/>
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/picture"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="#FF9D6F"
            android:text="@string/report_submit"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:id="@+id/report_btn"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>