<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".module.CollectionActivity"
    android:id="@+id/collection_draw">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            style="@style/ToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@drawable/bar_back"
            app:titleTextColor="#000000"
            android:id="@+id/collection_toolbar"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D0D0D0"
            android:layout_marginTop="10dp"
            android:id="@+id/collection_list"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorNav"
        android:fitsSystemWindows="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/unLogin_nav">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_login_tip"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorText"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:text="@string/nav_register"
                    android:textSize="15sp"
                    android:textColor="@color/colorButtonText"
                    android:background="@drawable/button_corner1"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:id="@+id/register_btn"/>
                <Button
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:text="@string/nav_login"
                    android:textSize="15sp"
                    android:textColor="@color/colorButtonText"
                    android:background="@drawable/button_corner2"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:shadowRadius="20"
                    android:id="@+id/login_btn"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/login_nav">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">
                <cn.cslg.snowymoney.view.CircleImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/user"
                    app:frame_width="3dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/user_img"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/colorText"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:id="@+id/user_name"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user_coin"
                            android:textSize="12sp"
                            android:textColor="@color/colorCoin"
                            android:layout_marginStart="20dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:textColor="@color/colorCoin"
                            android:id="@+id/user_coin"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nav_charge"
                            android:textSize="12sp"
                            android:textColor="@color/colorCharge"
                            android:id="@+id/user_charge"
                            android:layout_marginStart="40dp"/>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:drawableStart="@drawable/home"
                    android:drawablePadding="20dp"
                    android:text="@string/nav_home"
                    android:textSize="15sp"
                    android:textColor="@color/colorText"
                    android:gravity="center_vertical"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:id="@+id/nav_home"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:drawableStart="@drawable/publish"
                    android:drawablePadding="20dp"
                    android:text="@string/nav_pub"
                    android:textSize="15sp"
                    android:textColor="@color/colorText"
                    android:gravity="center_vertical"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:id="@+id/nav_publish"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/colorNavSelect"
                    android:drawableStart="@drawable/collection"
                    android:drawablePadding="20dp"
                    android:text="@string/nav_collection"
                    android:textSize="15sp"
                    android:textColor="@color/colorText"
                    android:gravity="center_vertical"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:id="@+id/nav_collection"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:drawableStart="@drawable/published"
                    android:drawablePadding="20dp"
                    android:text="@string/nav_logout"
                    android:textSize="15sp"
                    android:textColor="@color/colorText"
                    android:gravity="center_vertical"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:id="@+id/nav_issued"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>